[package]
name = "time_tweet"
version = "0.1.0"
authors = ["ecto0310 <ecto0310@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.55"
